# OrgEngine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-windows-platform.yml
src/Core/: Array.h  Audio.cpp  Audio.h  InputHandler.cpp  InputHandler.h  Logger.h  Main.cpp  PrimTypes.h  Timer.h  Vector.h  funutils.h  init.h
src/Game/: Application.cpp  Application.h  Main.cpp
src/Platform/: InputHandler.cpp  InputHandler.h  PlatformSDL.cpp  PlatformSDL.h  PlatformWindows.cpp  PlatformWindows.h  WindowContext.h
src/Renderer/: Camera.cpp  Camera.h  ResourceLoader.cpp  ResourceLoader.h
src/Renderer/DirectX11/: D3D11Main.cpp  D3D11Main.h
src/Renderer/OpenGL/: OpenGLMain.cpp  OpenGLMain.h
src/Renderer/Vulkan/: VulkanDescriptor.cpp  VulkanDescriptor.h  VulkanHeader.h  VulkanImages.cpp  VulkanImages.h  VulkanInitializers.cpp  VulkanInitializers.h  VulkanLoader.cpp  VulkanLoader.h  VulkanMain.cpp  VulkanMain.h  VulkanMaterials.cpp  VulkanMaterials.h  VulkanPipelines.cpp  VulkanPipelines.h  VulkanSceneNode.cpp  VulkanSceneNode.h  VulkanTypes.cpp  VulkanTypes.h
src/Shaders/: coloredTriangle.frag  coloredTriangle.vert  coloredTriangleMesh.vert  inputStructures.glsl  mesh.frag  mesh.vert  texImg.frag
src/renderer/: VmaUsage.cpp  VulkanMain.cpp  VulkanMain.h
